# postgres-tmp

./: .gitignore  .travis.yml  CHANGELOG.md  Main.hs  README.md  postgres-tmp.cabal  stack.yaml
src/Database/PostgreSQL/: Tmp.hs
test/: Spec.hs
test/Database/PostgreSQL/: TmpSpec.hs
