name:                postgres-tmp
version:             0.1.0.0
synopsis:            Create a temporary database that is deleted after performing some operation
description:         Please see README.md
homepage:            https://github.com/cocreature/postgres-tmp#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           2016
category:            Unknown
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.PostgreSQL.Tmp
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , postgresql-simple >= 0.5 && < 0.6
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cocreature/postgres-tmp
