name:                postgres-tmp
version:             0.1.0.1
synopsis:            Create a temporary database that is deleted after performing some operation
description:         Please see README.md
homepage:            https://github.com/cocreature/postgres-tmp#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
copyright:           2016
category:            Unknown
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Database.PostgreSQL.Tmp
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , postgresql-simple >= 0.5 && < 0.6
                     , safe-exceptions >= 0.1 && < 0.2
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite hasql-notifications-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Database.PostgreSQL.TmpSpec
  build-depends:       base
                     , hspec >= 2.2 && < 2.3
                     , bytestring
                     , postgres-tmp
                     , postgresql-simple
                     , safe-exceptions
                     , text >= 1.2 && < 1.3
  ghc-options:         -Wall
  default-language:    Haskell2010

executable hasql-bug
  main-is: Main.hs
  build-depends:       base
                     , hspec >= 2.2 && < 2.3
                     , bytestring
                     , postgres-tmp
                     , postgresql-simple
                     , safe-exceptions
                     , text >= 1.2 && < 1.3
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cocreature/postgres-tmp
